--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <article class="card">
 
-        <img src="/assets/img/me.jpg" alt="" class="me-img">
+        <img src="/assets/img/lien.jpg" alt="" class="me-img">
 
       </article>
 
