--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
             <li>SASS</li>
             <li>Git</li>
           </ul>
-          <img src="/assets/certificates/dweb.png" alt="" class="certificate-img">
+          
+          <img src="https://i.ibb.co/BPKdFj9/desarrolloweb.png" alt="desarrolloweb" class="certificate-img">
         </article>
 
         <article class="certificates">
