--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <article class="card">
 
-        <img src="/assets/img/lien.jpg" alt="" class="me-img">
+        <img src="https://i.ibb.co/mJq1N80/lien.jpg" alt="lien" class="me-img">
 
       </article>
 
@@ -71,7 +71,7 @@
             <li>SASS</li>
             <li>Git</li>
           </ul>
-          
+
           <img src="https://i.ibb.co/BPKdFj9/desarrolloweb.png" alt="desarrolloweb" class="certificate-img">
         </article>
 
