--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./assets/img/pyramid.png" type="image/x-icon">
   <link rel="stylesheet" href="./style/style.css">
-  <script src="/node_modules/typed.js/lib/typed.js"></script>
+  <script src="/node_modules/typed.js/lib/typed.min.js"></script>
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
   <title>Lien Sanchez</title>
 </head>
