--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" href="./assets/img/pyramid.png" type="image/x-icon">
   <link rel="stylesheet" href="./style/style.css">
   <script src="/node_modules/typed.js/lib/typed.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
   <title>Lien Sanchez</title>
 </head>
