--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <title>Lien Sanchez</title>
 </head>
 <body>
+  <style>
+    body{
+    background-image: url(/assets/img/mdz.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    }
+  </style>
   <header class="menu">
 
     <button class="button-open"><i class='bx bx-menu'></i></button>
