--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <style>
     body{
-    background-image: url(/assets/img/mdz.jpg);
+    background-image: url("https://i.ibb.co/dKxQrN0/mdz.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     }
