--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       <article class="text-animated">
 
-        <h2 class="my-name">Lien Sanchez</h2>
+        <h2 class="my-name">Lien Sanchez CCC</h2>
 
         <div class="typed">
           <h2 class="my-role"><span class="anim"></span> </h2>         
