--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     
         </script>
 
-        <p class="about-me-text">Tengo 22 años, actualmente estudio desarrollador full-stack en <a href="https://www.soyhenry.com/webfullstack">soyHenry</a>. Soy una persona amigable, entusiasta, proactiva y curiosa que siempre está tratando de aprender cosas nuevas, nuevos desafíos crecer poco a poco todos los días. Estoy buscando un puesto de entrada para usar mis habilidades en codificación, resolución de problemas complejos y asistencia en proyectos. Mi<a download="" href="/assets/certificates/Sanchez Front End.pdf"> Curriculum </a></p>
+        <p class="about-me-text">Tengo 22 años, actualmente estudio desarrollador full-stack en <a href="https://www.soyhenry.com/webfullstack">soyHenry</a>. Soy una persona amigable, entusiasta, proactiva y curiosa que siempre está tratando de aprender cosas nuevas, nuevos desafíos crecer poco a poco todos los días. Estoy buscando un puesto de entrada para usar mis habilidades en codificación, resolución de problemas complejos y asistencia en proyectos. Mi<a download="" href="/assets/certificates/Sanchez FrontEnd CV.pdf"> Curriculum </a></p>
 
       </article>
 
