change in images

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <style>
     body{
-    background-image: url("https://i.ibb.co/dKxQrN0/mdz.jpg");
+    background-image: url(./assets/img/mdz.jpg);/* "https://i.ibb.co/dKxQrN0/mdz.jpg" */
     background-repeat: no-repeat;
     background-attachment: fixed;
     }
@@ -44,8 +44,8 @@
 
       <article class="card">
 
-        <img src="https://i.ibb.co/mJq1N80/lien.jpg" alt="lien" class="me-img">
-
+        <img src="./assets/img/lien.jpg" alt="lien" class="me-img">
+        <!-- https://i.ibb.co/mJq1N80/lien.jpg -->
       </article>
 
       <article class="text-animated">
