--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <li>Apis</li>
             <li>Npm</li>
           </ul>
-          <h3>Entrega de Certificado 03/05</h3>
+          <img src="./assets/img/react.png" alt="" class="certificate-img">
         </article>
 
     </section>
